# algotrade

./: .gitignore  Makefile  README.md  config.toml  pyproject.toml  requirements.txt
algotrade/: algotrade.py  broker.py  config.py  orders_manager.py  pnl_monitor.py  pubsub.py
algotrade/algo/: algorithm.py
algotrade/algo/arbitrage/: direct_arbitrage.py  direct_arbitrage_data_writer.py  min_ask_max_bid.py  run_direct_arbitrage.py
algotrade/algo/bbba/: bbba.py  price_server.py
algotrade/common/: csvwriter.py  data_models.py  enums.py  idgenerator.py  mytimer.py  utils.py
algotrade/connect/adapter/: adapter.py  bsdex.py  talos.py
algotrade/connect/connector/: connector.py
algotrade/main/: prompt_trading.py  run_direct_arbitrage.py
algotrade/order_book/: order_book.py
tests/: common.py  test_bbba.py  test_connector.py  test_direct_arb.py  test_order_book.py  test_orders_manager.py  test_pubsub.py
tests/configs/: bbba.toml
tests/test_adapters/: talos_adapter_fixtures.py
